--- a/module1/bai_11_Cau_truc_lap_2/bai_tap/luyen_tap_1.1.html
+++ b/module1/bai_11_Cau_truc_lap_2/bai_tap/luyen_tap_1.1.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <script>
-    // Duyệt mảng
-    fruits = ["Banana", "Orange", "Apple", "Mango"]
-
+    function run(){
+        for (i=1; i < 100; i++){
+            console.log(i)
+        }
+    }
+    run(100)
 </script>
 
 </body>
