--- a/module1/bai_6_Tong_quan_JavaScript/nhap/console.log.html
+++ b/module1/bai_6_Tong_quan_JavaScript/nhap/console.log.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 <script>
-    // Duyệt mảng
-    fruits = ["Banana", "Orange", "Apple", "Mango"]
-
-</script>
-
+function run() {
+    console.log("Hello Work");
+}
+<script/>
 </body>
 </html>
